# CodeSort

./: README.md  package-lock.json  run.bat
backend/: CMakeLists.txt
backend/include/: ArrayUtil.h  Card.h  Constants.h  Deck.h  Game.h  SortUtil.h  WebRequests.h  WinServer.h
backend/src/: main.cpp
backend/src/elements/: Card.cpp  Game.cpp
backend/src/server/: WebRequests.cpp  WinServer.cpp
backend/src/structures/: ArrayManager.cpp  Deck.cpp
frontend/src/: App.tsx
frontend/src/networking/: WebRequests.tsx
frontend/src/pages/errorPopup/: Popups.tsx
frontend/src/pages/errorPopup/styles/: ServerErrorPopup.module.css
frontend/src/pages/finalPage/: finalPage.tsx
frontend/src/pages/finalPage/Styles/: Endscreen.module.css
frontend/src/pages/gameLoopPage/: Card.tsx  GameLoop.tsx
frontend/src/pages/gameLoopPage/styles/: GameLoop.module.css  arrayArea.module.css  gameArea.module.css  handArea.module.css  header.module.css
frontend/src/pages/mainMenu/: MainMenu.tsx
frontend/src/pages/tutorial/: Tutorial.tsx
frontend/src/util/: Constants.ts  Utility.tsx
